--- a/src/Components/LoginPage/LoginStyle.css
+++ b/src/Components/LoginPage/LoginStyle.css
@@ -8,7 +8,7 @@
 
 .Auth-form {
     width: 420px;
-    box-shadow: rgb(181, 235, 65, 0.16) 1px 1px 10px;
+    box-shadow: rgb(181, 235, 65, 0.16) 1px 1px 30px;
     padding-top: 30px;
     padding-bottom: 20px;
     border-radius: 8px;
@@ -37,7 +37,9 @@
     font-weight: 800;
 }
 
-
+.forgotPassword {
+    text-align: center;
+}
 
 /* button css */
 .button-75 {
