--- a/src/App.css
+++ b/src/App.css
@@ -101,8 +101,8 @@ p.danger {
 nav.navbar {
   padding: 18px 0;
   position: fixed;
-  width: 100%;
-  top: 0;
+  width: 80%;
+  top: 20px;
   z-index: 9999;
   transition: 0.32s ease-in-out;
 }
@@ -113,7 +113,7 @@ nav.navbar.scrolled {
 }
 
 nav.navbar a.navbar-brand {
-  width: 9%;
+  width: 12%;
 }
 
 nav.navbar .navbar-nav .nav-link.navbar-link {
@@ -138,9 +138,9 @@ span.navbar-text {
   font-weight: 700;
   color: #fff;
   border: 1px solid rgb(221, 255, 0);
-  padding: 18px 34px;
+  padding: 20px 34px;
   font-size: 18px;
-  margin-left: 18px;
+  margin-left: 35px;
   position: relative;
   background-color: transparent;
   transition: 0.3s ease-in-out;
