--- a/src/App.css
+++ b/src/App.css
@@ -137,13 +137,14 @@ span.navbar-text {
 .navbar-text button {
   font-weight: 700;
   color: #fff;
-  border: 1px solid rgb(221, 255, 0);
+  border: 1px solid rgb(255, 239, 10);
   padding: 20px 34px;
   font-size: 18px;
   margin-left: 35px;
   position: fixed;
   width: 250px;
   background-color: transparent;
+  border-radius: 10px;
   transition: 0.3s ease-in-out;
   text-align: center;
 }
@@ -235,7 +236,7 @@ nav.navbar .navbar-toggler[aria-expanded="true"] .navbar-toggler-icon {
   background-position: top center;
   background-size: cover;
   background-repeat: no-repeat;
-  background-image: linear-gradient(135deg, #b5eb41 40%, #fc894d);
+  background-image: linear-gradient(135deg, #fdec00 40%, #ff5900);
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
 }
@@ -262,6 +263,9 @@ nav.navbar .navbar-toggler[aria-expanded="true"] .navbar-toggler-icon {
   line-height: 1;
   margin-bottom: 10px;
   display: block;
+}
+.banner h3 {
+  padding-top: 30px;
 }
 
 .banner p {
@@ -408,7 +412,7 @@ nav.navbar .navbar-toggler[aria-expanded="true"] .navbar-toggler-icon {
 /************ Footer Css ************/
 .footer {
   padding: 0 0 50px 0;
-  background-image: url("./assets/img/footer-bg.png");
+  /* background-image: url("./assets/img/footer-bg.png"); */
   background-position: center center;
   background-size: cover;
   background-repeat: no-repeat;
