--- a/src/Components/LoginPage/LoginStyle.css
+++ b/src/Components/LoginPage/LoginStyle.css
@@ -1,124 +1,118 @@
 .login-blur {
-    position: absolute;
-    background-color: rgba(0, 0, 0, 0.808);
-    width: 400px;
-    height: 300px;
-    filter: blur(40px);
-    opacity: 0.8;
-    z-index: 1;
-    border-radius: 100%;
-    margin-top: 3cm;
+  position: absolute;
+  background-color: rgba(0, 0, 0, 0.808);
+  width: 400px;
+  height: 300px;
+  filter: blur(40px);
+  opacity: 0.8;
+  z-index: 1;
+  border-radius: 100%;
+  margin-top: 3cm;
 }
 
-
 .Auth-form-container {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 100vw;
-    height: 100vh;
-
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100vw;
+  height: 100vh;
 }
 
 .Auth-form {
-    width: 420px;
-    box-shadow: rgb(181, 235, 65, 0.16) 1px 1px 30px;
-    padding-top: 30px;
-    padding-bottom: 20px;
-    border-radius: 8px;
-    z-index: 2;
-
+  width: 420px;
+  box-shadow: rgb(255, 239, 10, 0.5) 3px 3px 100px;
+  padding-top: 30px;
+  padding-bottom: 20px;
+  border-radius: 8px;
+  z-index: 2;
 }
 
 a {
-
-    text-decoration: none;
-    color: white;
+  text-decoration: none;
+  color: white;
 }
 
 a:hover {
-
-    text-decoration: none;
-    color: #ee9877;
+  text-decoration: none;
+  color: rgb(255, 239, 10);
 }
 
-
 .Auth-form-content {
-    padding-left: 12%;
-    padding-right: 12%;
+  padding-left: 12%;
+  padding-right: 12%;
 }
 
 .Auth-form-title {
-    text-align: center;
-    margin-bottom: 1em;
-    font-size: 24px;
-    color: #b5eb41;
-    font-weight: 800;
+  text-align: center;
+  margin-bottom: 1em;
+  font-size: 24px;
+  color: rgb(255, 239, 10);
+  font-weight: 800;
 }
 
 .forgotPassword {
-    text-align: center;
+  text-align: center;
 }
 
 /* button css */
 .button-75 {
-    align-items: center;
-    background-image: linear-gradient(135deg, #b5eb41 40%, #fc894d);
-    border: 0;
-    border-radius: 10px;
-    box-sizing: border-box;
-    color: #fff;
-    cursor: pointer;
-    display: flex;
-    flex-direction: column;
-    font-family: "Codec cold", sans-serif;
-    font-size: 16px;
-    font-weight: 700;
-    height: 54px;
-    justify-content: center;
-    letter-spacing: 0.4px;
-    line-height: 1;
-    max-width: 100%;
-    padding-left: 20px;
-    padding-right: 20px;
-    padding-top: 3px;
-    text-decoration: none;
-    text-transform: uppercase;
-    user-select: none;
-    -webkit-user-select: none;
-    touch-action: manipulation;
+  align-items: center;
+  background-image: linear-gradient(135deg, #fae847 60%, #fc894d);
+  border: 0;
+  border-radius: 10px;
+  box-sizing: border-box;
+  color: #fff;
+  cursor: pointer;
+  display: flex;
+  flex-direction: column;
+  font-family: "Codec cold", sans-serif;
+  font-size: 16px;
+  font-weight: 700;
+  height: 54px;
+  justify-content: center;
+  letter-spacing: 0.4px;
+  line-height: 1;
+  max-width: 100%;
+  padding-left: 20px;
+  padding-right: 20px;
+  padding-top: 3px;
+  text-decoration: none;
+  text-transform: uppercase;
+  user-select: none;
+  -webkit-user-select: none;
+  touch-action: manipulation;
 }
 
 .button-75:active {
-    outline: 0;
+  outline: 0;
 }
 
 .button-75:hover {
-    outline: 0;
+  outline: 0;
 }
 
 .button-75 span {
-    transition: all 200ms;
+  transition: all 200ms;
 }
 
 .button-75:hover span {
-    transform: scale(0.9);
-    opacity: 0.75;
+  transform: scale(0.9);
+  opacity: 0.75;
 }
 
 @media screen and (max-width: 991px) {
-    .button-75 {
-        font-size: 15px;
-        height: 50px;
-    }
+  .button-75 {
+    font-size: 15px;
+    height: 50px;
+  }
 
-    .button-75 span {
-        line-height: 50px;
-    }
+  .button-75 span {
+    line-height: 50px;
+  }
 }
 
 label {
-    font-size: 14px;
-    font-weight: 600;
-    color: rgb(181, 235, 65);
+  font-size: 14px;
+  font-weight: 600;
+  color: rgb(255, 239, 10);
 }
