--- a/src/App.css
+++ b/src/App.css
@@ -264,9 +264,11 @@ nav.navbar .navbar-toggler[aria-expanded="true"] .navbar-toggler-icon {
   line-height: 1;
   margin-bottom: 10px;
   display: block;
+  text-shadow: rgb(255, 239, 10, 0.5) 1px 15px 10px;
 }
 .banner h3 {
   padding-top: 30px;
+  text-shadow: rgb(255, 239, 10, 0.5) 1px 15px 10px;
 }
 
 .banner p {
