--- a/src/Components/Users/Owner/OwnerPage.css
+++ b/src/Components/Users/Owner/OwnerPage.css
@@ -1,3 +1,27 @@
-.background_admin_db {
-    background-color: black;
+.OwnerPage {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    height: 100vh;
+    background-color: rgb(0, 0, 0);
+}
+
+.page {
+    flex-basis: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    transition: margin-left 1s;
+}
+
+.page-with-navbar {
+    margin-left: 15%;
+}
+
+@media only screen and (max-width: 768px) {
+    .page-with-navbar {
+        width: 100%;
+        margin-left: 0;
+    }
+
 }
