--- a/src/Components/Users/Owner/OwnerPage.css
+++ b/src/Components/Users/Owner/OwnerPage.css
@@ -4,9 +4,10 @@
     width: 100%;
     height: 100vh;
     background-color: rgb(0, 0, 0);
+    background-image: none !important;
 }
 
-.page {
+/* .page {
     flex-basis: 100%;
     display: flex;
     justify-content: center;
@@ -24,4 +25,4 @@
         margin-left: 0;
     }
 
-}
+} */
