--- a/src/utils/sidebars/SideBar.css
+++ b/src/utils/sidebars/SideBar.css
@@ -1,5 +1,5 @@
 #SideBar {
-    background-color: #fdd13f;
+    background-color: #171616;
     width: 248px;
     height: 100vh;
     display: flex;
