--- a/src/utils/sidebars/SideBar.css
+++ b/src/utils/sidebars/SideBar.css
@@ -11,17 +11,17 @@
 #SideBar .Logo {}
 
 #SideBar .content {
-    padding: 0 10px;
+    padding: 0 0px;
 
 }
 
 #SideBar .content .menu_top {
-    margin-bottom: 200px;
+    margin-bottom: 100px;
 }
 
 #SideBar .content .menu_item {
-    margin: 15px 10px;
-    padding: 0 10px;
+    margin: 15px 0px;
+    padding: 10px 10px;
     color: azure;
     text-align: left;
 }
