--- a/src/Components/Pages/Gym Member/TableP.css
+++ b/src/Components/Pages/Gym Member/TableP.css
@@ -1,30 +1,37 @@
 .app-container {
     display: flex;
     flex-direction: column;
+    align-items: center;
     gap: 10px;
-    padding: 1rem;
+    padding: 4rem;
+}
+
+.app-container h2 {
+    color: blueviolet;
 }
 
 table {
     border-collapse: collapse;
-    width: 100px;
+    width: 800px;
     height: 50px;
 }
 
 th,
 td {
-    border: 1px solid #81e014;
+    /* border: 1px solid #81e014; */
+    border-radius: 10px;
     text-align: left;
     padding: 2px;
     font-size: 12px;
+    color: black;
 }
 
 th {
-    background-color: rgb(19, 218, 39);
+    background-color: rgb(19, 218, 195);
 }
 
 td {
-    background-color: rgb(179, 216, 93);
+    background-color: rgb(235, 236, 232);
 }
 
 form {
