--- a/src/Components/Pages/Dashboard/dashboard.css
+++ b/src/Components/Pages/Dashboard/dashboard.css
@@ -37,3 +37,18 @@
 
 
 }
+
+#main_dashboard .active_table_ingym {
+    width: 100%;
+    -webkit-box-shadow: 20px 40px 10px 1px rgba(237, 231, 231, 0.47);
+    box-shadow: 15px 4px 10px 1px rgba(14, 14, 14, 0.244);
+    border-radius: 10px;
+    height: 150px;
+
+}
+
+#main_dashboard .main_div {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
