--- a/src/Components/Pages/Gym Member/TableP.css
+++ b/src/Components/Pages/Gym Member/TableP.css
@@ -20,14 +20,14 @@ th,
 td {
     /* border: 1px solid #81e014; */
     border-radius: 10px;
-    text-align: left;
+    text-align: center;
     padding: 2px;
     font-size: 12px;
     color: black;
 }
 
 th {
-    background-color: rgb(19, 218, 195);
+    background-color: rgb(61, 171, 158);
 }
 
 td {
