--- a/src/Components/Pages/Gym Member/gymmember.css
+++ b/src/Components/Pages/Gym Member/gymmember.css
@@ -6,11 +6,17 @@
     height: 100vh;
 }
 
-/* #main_gymmember .gymmember_background {
-    width: 100%;
+#main_gymmember .gymmember_background {
+    border-radius: 10px;
     background-color: rgb(248, 247, 250);
     background-image: none !important;
-    display: flex !important;
+    width: 70%;
+    height: 70%;
     flex-direction: column;
-} */
+    margin-left: 50px;
+    margin-top: 50px;
+    -webkit-box-shadow: 20px 40px 10px 1px rgba(237, 231, 231, 0.47);
+    box-shadow: 15px 4px 10px 1px rgba(14, 14, 14, 0.244);
+}
+
 #main_gymmember .gymmember_background {}
