[changed table,dasboard]

--- a/src/Components/Pages/Gym Member/TableP.css
+++ b/src/Components/Pages/Gym Member/TableP.css
@@ -19,7 +19,7 @@ table {
 th,
 td {
     /* border: 1px solid #81e014; */
-    border-radius: 10px;
+    border-radius: 0px;
     text-align: center;
     padding: 2px;
     font-size: 12px;
@@ -27,11 +27,12 @@ td {
 }
 
 th {
-    background-color: rgb(61, 171, 158);
+    background-color: rgba(1, 1, 1, 0.635);
 }
 
 td {
-    background-color: rgb(235, 236, 232);
+    background-color: rgb(248, 247, 250);
+
 }
 
 form {
@@ -46,4 +47,12 @@ form td:last-child {
 
 form * {
     font-size: 12px;
+}
+
+
+.button_add {
+    background-color: rgb(81, 212, 49);
+    border-radius: 10px;
+    width: 50px;
+
 }
