--- a/src/Components/Pages/Gym Member/gymmember.css
+++ b/src/Components/Pages/Gym Member/gymmember.css
@@ -8,7 +8,8 @@
 
 #main_gymmember .gymmember_background {
     border-radius: 10px;
-    background-color: rgb(248, 247, 250);
+    background-color: rgba(164, 14, 210, 0.388);
+
     background-image: none !important;
     width: 70%;
     height: 70%;
