[changed table,dasboard]

--- a/src/Components/Pages/Gym Member/gymmember.css
+++ b/src/Components/Pages/Gym Member/gymmember.css
@@ -8,7 +8,7 @@
 
 #main_gymmember .gymmember_background {
     border-radius: 10px;
-    background-color: rgba(164, 14, 210, 0.388);
+    background-color: #22201e;
 
     background-image: none !important;
     width: 70%;
