--- a/src/Components/About/style.css
+++ b/src/Components/About/style.css
@@ -1,11 +1,37 @@
+.login-blur {
+  position: absolute;
+  background-color: rgba(0, 0, 0, 0.808);
+  width: 400px;
+  height: 300px;
+  filter: blur(40px);
+  opacity: 0.8;
+  z-index: 1;
+  border-radius: 100%;
+  margin-top: 3cm;
+}
+
+.Auth-form-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100vw;
+  height: 100vh;
+}
+
 .about {
   /* border: 5px solid; */
   display: flex;
-  height: 600px;
+  height: 630px;
   align-items: center;
   transform: translate(0, 37%);
   flex-direction: column;
   display: flex;
+  width: 800px;
+  box-shadow: rgb(255, 239, 10, 0.5) 3px 3px 100px;
+  padding-top: 30px;
+  padding-bottom: 20px;
+  border-radius: 8px;
+  z-index: 2;
 }
 
 .about h1 {
@@ -15,7 +41,7 @@
   color: #eedf10;
   text-shadow: rgb(255, 239, 10, 0.5) 1px 5px 10px;
 
-  width: 50%;
+  width: 70%;
 }
 
 .about p {
@@ -26,5 +52,5 @@
   color: rgb(255, 255, 255);
   text-shadow: rgba(0, 0, 0, 0.5) 3px 3px 1px;
 
-  width: 50%;
+  width: 75%;
 }
