--- a/src/Components/Login/LoginStyle.css
+++ b/src/Components/Login/LoginStyle.css
@@ -38,8 +38,10 @@ a:hover {
 }
 
 .Auth-form-content {
-  padding-left: 12%;
-  padding-right: 12%;
+  padding-left: 20%;
+  padding-right: 10%;
+  margin-left: 30px;
+
 }
 
 .Auth-form-title {
