--- a/src/Components/Pages/Gym Member/TableP.css
+++ b/src/Components/Pages/Gym Member/TableP.css
@@ -23,11 +23,11 @@ td {
     text-align: center;
     padding: 2px;
     font-size: 12px;
-    color: black;
+    color: rgb(10, 10, 10);
 }
 
 th {
-    background-color: rgba(1, 1, 1, 0.635);
+    background-color: rgb(220, 156, 18);
 }
 
 td {
@@ -54,5 +54,6 @@ form * {
     background-color: rgb(81, 212, 49);
     border-radius: 10px;
     width: 50px;
+    color: aliceblue;
 
 }
