--- a/src/Components/Pages/Gym Member/gymmember.css
+++ b/src/Components/Pages/Gym Member/gymmember.css
@@ -8,7 +8,7 @@
 
 #main_gymmember .gymmember_background {
     border-radius: 10px;
-    background-color: #22201e;
+    background-color: rgb(248, 247, 250);
 
     background-image: none !important;
     width: 70%;
