--- a/src/Components/Pages/Profile/profile.css
+++ b/src/Components/Pages/Profile/profile.css
@@ -5,3 +5,18 @@
     width: 100vw;
     height: 100vh;
 }
+
+.profile_div {
+
+
+    width: 600px;
+    height: 300px;
+    padding: 20px;
+    background-color: skyblue;
+    position: absolute;
+    top: 50%;
+    left: 60%;
+    margin-left: -300px;
+    margin-top: -150px;
+
+}
