--- a/src/App.css
+++ b/src/App.css
@@ -110,8 +110,8 @@ nav.navbar {
 }
 
 nav.navbar.scrolled {
-  padding: 0px 0;
-  background-color: #121212;
+  padding: 0;
+  background-color: transparent;
 }
 
 nav.navbar a.navbar-brand {
@@ -163,10 +163,11 @@ span.navbar-text {
   height: 100%;
   position: absolute;
   background-color: #fff;
+  border-radius: 10px;
   left: 0;
   top: 0;
   z-index: -1;
-  transition: 0.3s ease-in-out;
+  transition: 0.4s ease-in-out;
 }
 
 .navbar-text button:hover {
@@ -194,6 +195,7 @@ nav.navbar .navbar-toggler-icon {
   border-bottom: 2px solid #fff;
   transition: all 300ms linear;
   top: -2px;
+  border-radius: 15px;
 }
 
 nav.navbar .navbar-toggler-icon:focus {
@@ -220,6 +222,7 @@ nav.navbar .navbar-toggler-icon:after {
 nav.navbar .navbar-toggler[aria-expanded="true"] .navbar-toggler-icon:after {
   transform: rotate(45deg);
   background-color: #fff;
+
   height: 2px;
 }
 
@@ -249,9 +252,11 @@ nav.navbar .navbar-toggler[aria-expanded="true"] .navbar-toggler-icon {
   font-weight: 700;
   letter-spacing: 0.8px;
   padding: 8px 10px;
-  color: linear-gradient(90.21deg,
-      rgba(170, 139, 54, 0.5) -5.91%,
-      rgba(7, 0, 0, 0.5) 111.58%);
+  color: linear-gradient(
+    90.21deg,
+    rgba(170, 139, 54, 0.5) -5.91%,
+    rgba(7, 0, 0, 0.5) 111.58%
+  );
   border: 1px solid rgba(255, 255, 255, 0.5);
   font-size: 20px;
   margin-bottom: 16px;
@@ -320,7 +325,7 @@ nav.navbar .navbar-toggler[aria-expanded="true"] .navbar-toggler-icon {
   }
 }
 
-.txt-rotate>.wrap {
+.txt-rotate > .wrap {
   border-right: 0.08em solid #666;
 }
 
