--- a/src/Components/Pages/Gym Member/row.css
+++ b/src/Components/Pages/Gym Member/row.css
@@ -1,11 +1,15 @@
 .button_delete {
-    background-color: rgb(255, 0, 0);
-    border-radius: 10px;
-    width: 50px;
+  background-color: rgb(255, 0, 0);
+  border-radius: 6px;
+  width: 20px;
+  color: aliceblue;
+  margin-left: 20px;
 }
 
 .button_edit {
-    background-color: rgb(0, 42, 255);
-    border-radius: 8px;
-    width: 50px;
+  background-color: rgb(0, 155, 175);
+  border-radius: 6px;
+  width: 60px;
+  color: aliceblue;
+  margin-left: 20px;
 }
