--- a/src/Components/Pages/Dashboard/dashboard.css
+++ b/src/Components/Pages/Dashboard/dashboard.css
@@ -44,7 +44,7 @@
     box-shadow: 15px 4px 10px 1px rgba(14, 14, 14, 0.244);
     border-radius: 10px;
     height: 150px;
-
+    color: black;
 }
 
 #main_dashboard .main_div {
