delete user added and profil page created

--- a/src/App.css
+++ b/src/App.css
@@ -38,7 +38,7 @@ body {
   overflow-x: hidden;
   position: relative;
   background-color: #121212 !important;
-  color: #fff !important;
+  /* color: #fff !important; */
   font-family: "Centra", sans-serif !important;
 }
 
