--- a/src/Components/Users/Owner/ManageMembers/gymmember.css
+++ b/src/Components/Users/Owner/ManageMembers/gymmember.css
@@ -14,7 +14,6 @@
   display: none;
 }
 
-
 #main_gymmember .gymmember_background {
   border-radius: 10px;
   background-color: rgb(248, 247, 250);
@@ -26,7 +25,8 @@
   margin-left: 50px;
   margin-top: 50px;
   -webkit-box-shadow: 20px 40px 10px 1px rgba(237, 231, 231, 0.47);
-  box-shadow: 15px 4px 10px 1px rgba(14, 14, 14, 0.244);
+  box-shadow: 10px 10px 20px 20px rgba(14, 14, 14, 0.244);
 }
 
-#main_gymmember .gymmember_background {}
+#main_gymmember .gymmember_background {
+}
