--- a/src/Components/Users/Member/Dashboard/dashboard.css
+++ b/src/Components/Users/Member/Dashboard/dashboard.css
@@ -2,6 +2,7 @@
   background-color: rgb(248, 247, 250);
   background-image: none !important;
   display: flex;
+  flex-direction: column;
   width: 100vw;
   height: 100vh;
   overflow-y: auto;
@@ -17,7 +18,8 @@
 
 #main_dashboard .dashboard_graphs .widgets {
   display: flex;
-  padding: 20px;
+  padding-right: 50%;
+  height: auto;
   gap: 20px;
 }
 
