--- a/src/Components/Users/Owner/ManageMembers/gymmember.css
+++ b/src/Components/Users/Owner/ManageMembers/gymmember.css
@@ -1,4 +1,4 @@
-#main_gymmember {
+/* #main_gymmember {
   background-color: rgb(248, 247, 250);
   background-image: none !important;
   display: flex;
@@ -29,4 +29,10 @@
 }
 
 #main_gymmember .gymmember_background {
+} */
+
+.manage-member {
+  justify-content: center;
+  text-align: center;
+  margin-left: 10%;
 }
