changed gymmember webpage

--- a/src/Components/Users/Member/Dashboard/main.css
+++ b/src/Components/Users/Member/Dashboard/main.css
@@ -8,7 +8,7 @@
 }
 
 :root {
-    --mainColor: #0d0d0e;
+    --mainColor: #1E2229;
     --mainColorLight: #5767aa;
     --secondaryColor: #db2b39;
     --textColor: #eee;
