--- a/src/Components/Users/Member/Dashboard/dashboard.css
+++ b/src/Components/Users/Member/Dashboard/dashboard.css
@@ -10,6 +10,7 @@
 
 #main_dashboard .dashboard_graphs {
   width: 100%;
+  height: 100%;
   background-color: rgb(235, 234, 239);
   background-image: none !important;
   display: flex !important;
@@ -17,10 +18,33 @@
 }
 
 #main_dashboard .dashboard_graphs .widgets {
-  display: flex;
+  /* display: flex;
   padding-right: 50%;
   height: auto;
-  gap: 20px;
+  gap: 20px; */
+  height: 300px;
+  width: 970px;
+  margin-right: auto;
+  margin-left: auto;
+
+}
+
+#main_dashboard .dashboard_graphs .widgets .first {
+  float: left;
+  height: 300px;
+  width: 303px;
+  margin: 10px;
+  color: #FFFFFF;
+
+}
+
+#main_dashboard .dashboard_graphs .widgets .second {
+  float: left;
+  height: 300px;
+  width: 303px;
+  margin: 10px;
+  color: #FFFFFF;
+
 }
 
 #main_dashboard .dashboard_barcharts_group {
