--- a/src/Components/Utils/SideBar.css
+++ b/src/Components/Utils/SideBar.css
@@ -1,7 +1,17 @@
-.SideBar {
-  background-color: #1E2229;
+/* #SideBar {
+  background-color: #bfc7d4;
   width: 300px;
   display: flex;
+} */
+#SideBar {
+  background-color: #f0d430;
+  height: 100vh;
+  width: 300px !important;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  flex-direction: column;
+  color: #000000;
 }
 
 #SideBar .Logo {
@@ -21,11 +31,12 @@
 #SideBar .content .menu_item {
   display: flex;
   align-items: center;
-  color: #fff;
+  color: rgb(0, 0, 0);
   text-decoration: none;
   padding: 10px 1rem;
   border-radius: 5px;
   margin-bottom: 5px;
+  width: 100%;
 }
 
 #SideBar .content .menu_item span {
