--- a/src/Components/Contact/style.css
+++ b/src/Components/Contact/style.css
@@ -1,12 +1,16 @@
-/************ Projects Css ************/
 .contact {
-  margin-right: 10%;
-  margin-left: 10%;
-  margin-top: 12%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100vw;
+  height: 100vh;
+
 }
 
 .contact img {
   width: 70%;
+  height: 100%;
+
 }
 
 .contact h2 {
@@ -73,18 +77,18 @@
 
 .contact form button::before {
   content: "";
-  background-image: linear-gradient(135deg, #b5eb41 40%, #fc894d);
-
-  width: 0;
-  height: 100%;
   position: absolute;
   top: 0;
   left: 0;
-  z-index: 0;
-  transition: 0.3s ease-in-out;
+  width: 100%;
+  height: 100%;
   border-radius: 10px;
+  background-color: #121212;
+  z-index: -1;
+  transition: 0.3s ease-in-out;
 }
 
 .contact form button:hover::before {
-  width: 100%;
+  background-color: #fff;
+  color: #121212;
 }
