--- a/src/Components/Users/Profile/profile.css
+++ b/src/Components/Users/Profile/profile.css
@@ -30,8 +30,8 @@
   margin-left: -8px;
 }
 
-.gutters-sm>.col,
-.gutters-sm>[class*="col-"] {
+.gutters-sm > .col,
+.gutters-sm > [class*="col-"] {
   padding-right: 8px;
   padding-left: 8px;
 }
@@ -71,7 +71,7 @@
 }
 
 #main_profile {
-  background-color: rgb(248, 247, 250);
+  background: inherit;
   background-image: none !important;
   display: flex;
   width: 100%;
