--- a/src/App.css
+++ b/src/App.css
@@ -38,7 +38,7 @@ html {
 }
 
 .not-auth {
-  background-image: url("./assets/img/gymback.jpg") !important;
+  background-image: url("./assets/img/gymback2.jpg") !important;
   background-repeat: no-repeat;
   background-size: cover;
   background-attachment: fixed;
